# actixsqlite

./: Cargo.toml  diesel.toml  product.db
src/: main.rs  model.rs  routes.rs  schema.rs  wshandler.rs
wsserver/: Cargo.toml
wsserver/src/: lib.rs  ws_con.rs
